[workspace]

resolver = "2"

members = [
  "abc226",
  "abc228",
  "abc232",
  "abc233",
  "abc255",
  "abc256",
  "abc257",
  "abc258",
  "abc259",
  "abc260",
  "abc261",
  "abc262",
  "abc263",
  "abc265",
  "abc266",
  "abc267",
  "abc268",
  "abc269",
  "abc270",
  "abc271",
  "abc272",
  "abc273",
  "abc274",
  "abc275",
  "abc276",
  "abc278",
  "abc279",
  "abc280",
  "abc281",
  "abc282",
  "abc283",
  "agc059",
  "agc060",
  "arc142",
  "arc143",
  "arc144",
  "arc145",
  "arc146",
  "arc147",
  "arc148",
  "arc149",
  "arc150",
  "arc151",
  "arc152",
  "atc001",
  "practice2",
  "selfmade",
  "abc284",
  "arc153",
  "arc153",
  "abc285",
  "abc286",
  "arc154",
  "abc287",
  "arc155",
  "abc288",
  "abc289",
  "arc156",
  "abc290",
  "arc157",
  "abc291",
  "tupc2022",
  "abc292",
  "abc293",
  "arc158",
  "abc294",
  "abc294",
  "utpc2022",
  "abc295",
  "abc295",
  "abc296",
  "arc159",
  "arc159",
  "arc159",
  "abc297",
  "abc297",
  "abc297",
  "abc298",
  "abc299",
  "abc299",
  "abc300",
  "abc301",
  "arc160",
  "abc302",
  "agc062",
  "abc303",
  "arc161",
  "abc304",
  "abc305",
  "abc306",
  "arc162",
  "abc307",
  "abc308",
  "arc163",
  "abc309",
  "arc164",
  "abc311",
  "abc312",
  "abc313",
  "newjudge-2308-algorithm",
  "abc314",
  "abc315",
  "abc317",
  "abc317",
  "abc318",
  "abc319",
  "abc320",
  "arc165",
  "abc321",
  "abc322",
  "abc323",
  "arc166",
  "abc324",
  "arc167",
  "abc325",
  "abc326",
  "abc327",
  "abc328",
  "abc329",
  "arc168",
  "abc330",
  "abc331",
  "arc169",
  "abc332",
  "abc333",
  "agc065",
  "abc334",
  "abc335",
  "abc336",
  "abc337",
  "arc170",
  "abc338",
  "abc339",
  "arc171",
  "abc340",
  "abc341",
  "arc172",
  "abc342",
  "abc343",
  "abc344",
  "arc173",
  "abc345",
  "arc174",
  "abc346",
  "arc175",
  "abc347",
  "agc066",
  "abc348",
  "abc349",
  "abc350",
  "arc176",
  "abc351",
  "abc352",
  "abc353",
  "arc177",
  "abc354",
  "arc178",
  "abc355",
  "abc356",
  "arc179",
  "abc357",
  "abc358",
  "abc359",
  "arc180",
  "abc360",
  "abc361",
  "abc363",
  "abc364",
  "abc365",
  "arc181",
  "abc366",
]
