[package]
name = "utpc2022"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
utpc2022-a = { alias = "a", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_a" }
utpc2022-b = { alias = "b", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_b" }
utpc2022-c = { alias = "c", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_c" }
utpc2022-d = { alias = "d", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_d" }
utpc2022-e = { alias = "e", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_e" }
utpc2022-f = { alias = "f", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_f" }
utpc2022-g = { alias = "g", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_g" }
utpc2022-h = { alias = "h", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_h" }
utpc2022-i = { alias = "i", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_i" }
utpc2022-j = { alias = "j", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_j" }
utpc2022-k = { alias = "k", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_k" }
utpc2022-l = { alias = "l", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_l" }
utpc2022-m = { alias = "m", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_m" }
utpc2022-n = { alias = "n", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_n" }
utpc2022-o = { alias = "o", problem = "https://atcoder.jp/contests/utpc2022/tasks/utpc2022_o" }

[[bin]]
name = "utpc2022-a"
path = "src/bin/a.rs"

[[bin]]
name = "utpc2022-b"
path = "src/bin/b.rs"

[[bin]]
name = "utpc2022-c"
path = "src/bin/c.rs"

[[bin]]
name = "utpc2022-d"
path = "src/bin/d.rs"

[[bin]]
name = "utpc2022-e"
path = "src/bin/e.rs"

[[bin]]
name = "utpc2022-f"
path = "src/bin/f.rs"

[[bin]]
name = "utpc2022-g"
path = "src/bin/g.rs"

[[bin]]
name = "utpc2022-h"
path = "src/bin/h.rs"

[[bin]]
name = "utpc2022-i"
path = "src/bin/i.rs"

[[bin]]
name = "utpc2022-j"
path = "src/bin/j.rs"

[[bin]]
name = "utpc2022-k"
path = "src/bin/k.rs"

[[bin]]
name = "utpc2022-l"
path = "src/bin/l.rs"

[[bin]]
name = "utpc2022-m"
path = "src/bin/m.rs"

[[bin]]
name = "utpc2022-n"
path = "src/bin/n.rs"

[[bin]]
name = "utpc2022-o"
path = "src/bin/o.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
# nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
# smallvec = "=1.2.0"

[dev-dependencies]
